// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayMultiSelect renders 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <input
          class="form-control-inset"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders a custom menu 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
      style=""
    >
      <div
        class="input-group-item"
      >
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            foo
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove foo"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            bar
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove bar"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            baz
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove baz"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          class="form-control-inset"
          type="text"
          value="one"
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-primary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu autocomplete-dropdown-menu show"
        style="max-width: none; width: 0px; left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <strong>
                one
              </strong>
              <p>
                Name
              </p>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders as disabled 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            foo
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove foo"
              class="close"
              disabled=""
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            bar
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove bar"
              class="close"
              disabled=""
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            baz
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove baz"
              class="close"
              disabled=""
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          class="form-control-inset"
          disabled=""
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders as not valid 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            foo
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove foo"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            bar
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove bar"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            baz
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove baz"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          class="form-control-inset"
          type="text"
          value=""
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-primary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders with items 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            foo
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove foo"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            bar
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove bar"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <span
          class="label label-dismissible label-secondary"
        >
          <span
            class="label-item label-item-expand"
          >
            baz
          </span>
          <span
            class="label-item label-item-after"
          >
            <button
              aria-label="Remove baz"
              class="close"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times"
                role="presentation"
              >
                <use
                  xlink:href="/foo/bar#times"
                />
              </svg>
            </button>
          </span>
        </span>
        <input
          class="form-control-inset"
          type="text"
          value=""
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-primary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Interactions add non-sequential text should filter the items when it is the default function 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
      style=""
    >
      <div
        class="input-group-item"
      >
        <input
          class="form-control-inset"
          type="text"
          value="bz"
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-primary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu autocomplete-dropdown-menu show"
        style="max-width: none; width: 0px; left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <div>
                <strong>
                  b
                </strong>
                a
                <strong>
                  z
                </strong>
              </div>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Interactions adding text doesn not filter the items with a custom function 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
      style=""
    >
      <div
        class="input-group-item"
      >
        <input
          class="form-control-inset"
          type="text"
          value="foo"
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-primary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu autocomplete-dropdown-menu show"
        style="max-width: none; width: 0px; left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <div>
                <strong>
                  f
                </strong>
                <strong>
                  o
                </strong>
                <strong>
                  o
                </strong>
              </div>
            </button>
          </li>
          <li>
            <button
              class="dropdown-item"
            >
              bar
            </button>
          </li>
          <li>
            <button
              class="dropdown-item"
            >
              baz
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Interactions adding text filters the items 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
      style=""
    >
      <div
        class="input-group-item"
      >
        <input
          class="form-control-inset"
          type="text"
          value="foo"
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-primary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu autocomplete-dropdown-menu show"
        style="max-width: none; width: 0px; left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <div>
                <strong>
                  f
                </strong>
                <strong>
                  o
                </strong>
                <strong>
                  o
                </strong>
              </div>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Interactions adding text filters the items with a custom function 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
      style=""
    >
      <div
        class="input-group-item"
      >
        <input
          class="form-control-inset"
          type="text"
          value="bar"
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-primary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu autocomplete-dropdown-menu show"
        style="max-width: none; width: 0px; left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <div>
                <strong>
                  b
                </strong>
                <strong>
                  a
                </strong>
                <strong>
                  r
                </strong>
              </div>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`Interactions adding upper or lower case text should filter the items when it is the default function 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
      style=""
    >
      <div
        class="input-group-item"
      >
        <input
          class="form-control-inset"
          type="text"
          value="b"
        />
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          class="component-action btn btn-monospaced btn-primary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        class="dropdown-menu autocomplete-dropdown-menu show"
        style="max-width: none; width: 0px; left: -999px; top: -995px;"
      >
        <ul
          class="list-unstyled"
        >
          <li>
            <button
              class="dropdown-item"
            >
              <div>
                <strong>
                  B
                </strong>
                az
              </div>
            </button>
          </li>
          <li>
            <button
              class="dropdown-item"
            >
              <div>
                <strong>
                  b
                </strong>
                ar
              </div>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
